[package]
name = "url_parser_rust"
version = "0.1.0"
edition = "2021"
description = "list parser project"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
thiserror = "1.0.44"
peg = "0.8.0"

[dev-dependencies]  # Add this line if it's not present

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
